# blue-archive-decoder

./: .gitignore  Cargo.toml  LICENSE  README.md  dprint.json  index.html  localize_excel.fbs
.github/workflows/: release.yml
src/: db_migrator.rs  lib.rs  localize_excel.rs  localize_excel_generated.rs  main.rs  utils.rs  zip_reader.rs
src/ba_flatbuffers/: mod.rs
src/ba_flatbuffers/global/: account_level_excel_generated.rs  account_state_generated.rs  anniversary_generated.rs  assist_echelon_type_convert_excel_generated.rs  attendance_count_rule_generated.rs  attendance_excel_generated.rs  attendance_reset_type_generated.rs  attendance_reward_excel_generated.rs  attendance_type_generated.rs  bgm_global_excel_generated.rs  bgmexcel_generated.rs  bgmraid_excel_generated.rs  bgmuiexcel_generated.rs  camera_excel_generated.rs  character_dialog_emoji_excel_generated.rs  character_dialog_event_excel_generated.rs  character_dialog_excel_generated.rs  character_dialog_subtitle_excel_generated.rs  character_gear_excel_generated.rs  character_gear_level_excel_generated.rs  character_potential_excel_generated.rs  character_potential_reward_excel_generated.rs  character_potential_stat_excel_generated.rs  character_voice_excel_generated.rs  character_voice_subtitle_excel_generated.rs  clan_assist_slot_excel_generated.rs  clan_chatting_emoji_excel_generated.rs  clan_reward_excel_generated.rs  clan_reward_type_generated.rs  club_generated.rs  collection_unlock_type_generated.rs  combat_emoji_excel_generated.rs  content_enter_cost_reduce_excel_generated.rs  content_spoiler_popup_excel_generated.rs  content_type_generated.rs  contents_scenario_excel_generated.rs  contents_shortcut_excel_generated.rs  currency_additional_charge_type_generated.rs  currency_excel_generated.rs  currency_over_charge_type_generated.rs  (+156 more)
src/components/: app.rs  mod.rs  sheet_tabs.rs  sidebar.rs  table_selector_modal.rs  table_view.rs
src/core/: loader.rs  mod.rs  text_measurer.rs
