[package]
name = "blue-archive-decoder"
version = "0.1.0"
edition = "2024"
authors = ["Thomas Q <thomasqsa@gmail.com>"]
description = "Webapp for decoding Blue Archive's database file"
license = "AGPL-3.0-only"
repository = "https://github.com/thmasq/blue-archive-decoder"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
csv = "1.4.0"
flatbuffers = { version = "25.9.23", features = ["serde", "serialize"] }
fontdue = "0.9.3"
leptos = { version = "0.8.15", features = ["csr"] }
leptos-use = "0.17.0"
paste = "1.0.15"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
sqlite_wasm_reader = { git = "https://github.com/thmasq/sqlite-wasm-reader", tag = "v0.4.3" }
unicode-linebreak = "0.1.5"
wasm-bindgen = "0.2.106"
wasm-bindgen-futures = "0.4.56"
web-sys = { version = "0.3.83", features = ["console", "Window", "Document", "Element", "Node", "HtmlElement", "HtmlTableSectionElement", "HtmlTableRowElement", "HtmlTableCellElement", "DocumentFragment", "CssStyleDeclaration", "HtmlCanvasElement", "CanvasRenderingContext2d", "TextMetrics", "FileList", "File", "FileReader", "HtmlInputElement", "Event", "DragEvent", "Blob", "BlobPropertyBag", "Url"] }

[profile.release]
panic = "abort"
lto = "fat"
opt-level = 3
codegen-units = 1
